# voitures

./: CMakeLists.txt  main.cpp
dao/: BaseDAO.cpp  BaseDAO.h  ClientDAO.cpp  ClientDAO.h  LocationDAO.cpp  LocationDAO.h  VoitureDAO.cpp  VoitureDAO.h  db.cpp  db.h
entity/: Client.cpp  Client.h  Location.cpp  Location.h  Voiture.cpp  Voiture.h
pages/: mainwindow.cpp  mainwindow.h  vueclient.cpp  vueclient.h  vueclient.ui  vuelocation.cpp  vuelocation.h  vuelocation.ui  vuevoitures.cpp  vuevoitures.h  vuevoitures.ui
widget/: listeclient.cpp  listeclient.h  listeclient.ui  listevoiture.cpp  listevoiture.h  listevoiture.ui
